fix spacing recent friend activity

--- a/src/css/Shared/page3.css
+++ b/src/css/Shared/page3.css
@@ -13,8 +13,7 @@ html{
 .Body3Part{
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex-wrap: nowrap;
 
     background-color: #F1EEEA;
 
@@ -29,21 +28,23 @@ html{
     height: 100%;
 }
 
-.middleSide3Part{
-    width: 900px;
+.rightSide3Part{
     height: 100%;
+    width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: nowrap;
-    align-items: center;
+    justify-content: center;
 }
 
-.rightSide3Part{
-    width: 322px;
-    height: 100%;
+.rightPadding{
+    width: 150px;
+}
 
-    display: flex;
-    flex-direction: column;
-    flex-wrap:nowrap;
-    justify-content: space-around;
+.mainInfo{
+    width: 1000px;
+}
+
+.sidePart{
+    align-self: center;
 }
