--- a/src/css/Social/recentActivity.css
+++ b/src/css/Social/recentActivity.css
@@ -1,12 +1,6 @@
-#RecentActivity{
-    width: 80%;
-}
-
 #ActivityBox{
     box-sizing: border-box;
-
-
-    max-width: 840px;
+    width: 100%;
     background: #D9D9D9;
     border: 1px solid #014421;
     border-radius: 20px;
@@ -20,7 +14,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 800px;
+    width: 950px;
     margin: 10px;
 }
 
